r145 - october, 31, 2009
    * README and README-FR are up to date
    * CotisationTypeForm : mis_a_jour_par is used only when updating
    * cotisationtype : actions > code refactoring to use new myUser methods
    * /data/updates/r145.sql : 'cotisationtype.mis_a_jour_par' can be null
    * piwam-install.sql is up to date
    * cotisationtype : templates > showSuccess.php has been removed because
      unused
    * cotisationtype : actions > executeShow() has been removed because
      unused
    

r144 - october, 30, 2009
	* cotisation : actions > code refactoring to use new myUser methods
	* CotisationForm : default values are set within the action
	* CotisationForm : field 'mis_a_jour_par' is set only when updating
	* cotisationActionsTests : new tests


r143 - october, 30, 2009
	* sfGuardTestFunctional : new method to create a foreign account
	* compteActionsTest : complete tests


r142 - october, 29, 2009
	* compte : actions > code refactoring to use new myUser methods
	* compteActionsTest.php : new tests
	* loginActionsTest.php has been removed (module doesn't longer exist)
	* AssociationForm.class.php : field 'enregistre_par' has been removed to
	  avoid bugs due to session behaviour
	* sfGuardTestFunctional : signout() method
	* activite : actions > new > field 'mis_a_jour_par' is not set for creation
	* myUser : getUserId() > fixed awesome bug... (association id was returned)
	* MembreHelper : format_membre > code is more beautiful !
	* activite : templates > showSuccess > a special message is displayed if
	  activity has not been edited yet
	  

r141 - october, 27, 2009
	* membre : templates > _picture > input is a Membre object, and 'alt'
	  attribute has been set for the picture
	* myUser.class.php : getAssociationId() and getUserId()
	* activite : actions > code refactoring to use new myUser methods
	* symfony configure:author Adrien Mogenet
	* activite : templates > _form.php > error message is displayed after the
	  input field